# Decentralized-Voting-System

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  make_admin.sql  supabase_migration.sql
.github/workflows/: cd.yml  ci.yml
backend/: Cargo.toml
backend/auth-service/: Cargo.toml  Dockerfile
backend/auth-service/src/: errors.rs  main.rs
backend/auth-service/src/db/: mod.rs
backend/auth-service/src/handlers/: auth.rs  health.rs
backend/auth-service/src/middleware/: auth_middleware.rs  mod.rs
backend/auth-service/src/models/: user.rs
backend/election-service/: Cargo.toml  Dockerfile
backend/election-service/src/: errors.rs  main.rs
backend/election-service/src/db/: mod.rs
backend/election-service/src/handlers/: election.rs  health.rs  mod.rs
backend/election-service/src/middleware/: auth_middleware.rs
backend/election-service/src/models/: election.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/vote-service/: Cargo.toml  Dockerfile
backend/vote-service/src/: errors.rs  main.rs
backend/vote-service/src/db/: mod.rs
backend/vote-service/src/handlers/: health.rs  mod.rs  vote.rs
backend/vote-service/src/middleware/: auth_middleware.rs
backend/vote-service/src/models/: vote.rs
database/migrations/: 001_create_users.sql  002_create_elections.sql  003_create_votes.sql  004_create_audit_log.sql  005_create_roles_and_permissions.sql  006_add_results_published_to_elections.sql  006_fix_user_role_enum.sql
database/seeds/: 001_seed_data.sql
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json  tsconfig.json  tsconfig.spec.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/guards/: admin.guard.ts  auth.guard.ts  guest.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/services/: auth.service.ts  election.service.ts  vote.service.ts
frontend/src/app/features/admin/: admin.component.ts
frontend/src/app/features/admin/elections/: admin-elections.component.ts
frontend/src/app/features/admin/users/: admin-users.component.ts
frontend/src/app/features/auth/login/: login.component.ts
frontend/src/app/features/auth/register/: register.component.ts
frontend/src/app/features/dashboard/: dashboard.component.ts
frontend/src/app/features/elections/election-detail/: election-detail.component.ts
frontend/src/app/features/elections/election-form/: election-form.component.ts
frontend/src/app/features/elections/elections-list/: elections-list.component.ts
frontend/src/app/features/not-found/: not-found.component.ts
frontend/src/app/features/voting/ballot/: ballot.component.ts
frontend/src/app/features/voting/results/: results.component.ts
frontend/src/app/shared/navbar/: navbar.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
k8s/: namespace.yaml
k8s/auth-service/: auth-service.yaml
k8s/configmaps/: app-config.yaml
k8s/election-service/: election-service.yaml
k8s/frontend/: frontend.yaml
k8s/ingress/: ingress.yaml
k8s/monitoring/: monitoring.yaml  prometheus-docker.yml
k8s/postgres/: postgres.yaml
k8s/redis/: redis.yaml
k8s/secrets/: .gitkeep  app-secrets.yaml
k8s/vote-service/: vote-service.yaml
scripts/: setup.ps1  setup.sh
