[package]
name = "election-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "election-service"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.7",  features = ["macros"] }
tower        = { version = "0.4",  features = ["full"] }
tower-http   = { version = "0.5",  features = ["cors", "trace", "timeout"] }
sqlx         = { version = "0.7",  features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis        = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9"
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1",    features = ["v4", "serde"] }
chrono       = { version = "0.4",  features = ["serde"] }
thiserror    = "1"
anyhow       = "1"
validator    = { version = "0.17", features = ["derive"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy      = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
